<resources>
    <string name="app_name">PruebaTalana</string>
    <string name="ingresar_usuario">Ingrese su correo</string>
    <string name="ingresar_password">Ingrese su contraseña</string>
    <string name="registrar_usuario">Registre su correo</string>
    <string name="registrar_password">Registre su contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrarse</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="bienvenido">Bienvenido</string>
</resources>